# CreNewsSearch

./: .gitignore  CHECK.md  README.md  check_api.py  pyproject.toml  test_local.sh  test_production.sh  test_test.sh  todo.txt  usage.py
.github/workflows/: publish.yml  publish_production.yml  publish_test.yml  test_local.yml  test_production.yml  test_test.yml
src/CreNewsSearch/: NewsBase.py  NewsSearch.py  __init__.py  freeNews.py  newsApi.py  newsInstance.py  play.py
tests/: test_search.py
